--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>
-    Chat with Node</title>
+    <title>Chat with Node</title>
   </head>
   <body>
     <header class="page-header">
-      <h1>Hello from Node</h1>
+      <h1>Node Chat Service</h1>
     </header>
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="js/chat.js"></script>
   </body>
 </html>
