--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Chat with Node</title>
-  </head>
   <body>
     <header class="page-header">
       <h1>Node Chat Service</h1>
     </header>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <form class="chat-form">
+      <div class="form-group">
+        <input type="text" name="name" placeholder="Your name">
+      </div>
+      <div class="form-group">
+        <input type="text" name="message" placeholder="Message">
+      </div>
+      <button>Send message</button>
+    </form>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/chat.js"></script>
   </body>
 </html>
