--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
       <button>Send message</button>
     </form>
 
+    <ul class="messages">
+    </ul>
+
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/chat.js"></script>
   </body>
